--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "About"
 title_separator          : "-"
 name                     : &name "Noémie Moreau"
 description              : &description "personal description"
-url                      : https://Celestenono.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://noemiemoreau.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "Celestenono/Celestenono.github.io"
+repository               : "noemiemoreau/noemiemoreau.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -44,7 +44,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "Celestenono"
+  github           : "noemiemoreau"
   kaggle           : # Username
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")
 
